--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,8 @@
     "ngBootbox": "~0.1.3",
     "papaparse": "~4.1.2",
     "pdfmake": "0.1.37",
-    "roboto-fontface": "~0.6.0"
+    "roboto-fontface": "~0.6.0",
+    "titilliumweb-googlefont": ""
   },
   "overrides": {
     "pdfmake": {
