--- a/haproxy/src/haproxy.common.cfg
+++ b/haproxy/src/haproxy.common.cfg
@@ -27,5 +27,5 @@ backend backend_server
 
 backend backend_autoupdate
     mode http
-    timeout server 1h
+    timeout server 5m
     server autoupdate autoupdate:8002 resolvers docker_resolver check ssl verify none alpn h2
